# whattodo

./: .gitignore  .gitmodules  .markdownlint.yml  Dockerfile  Makefile  README.adoc  README.md  SUMMARY.md  WARP.md  antora-playbook.yml  build.sh  combined.md  convert.sh  debug-watchdog.sh  diplodoc.sh  docker.sh  install.sh  mkdocs.yml  package-lock.json  package.json  pyproject.toml  resize.sh  wtd.adoc
.devcontainer/: devcontainer.json
.devin/: wiki.json
.github/: copilot-instructions.md
addons/: otsylki.md
analiz-i-opredelenie-celei/: stereotipy-schastya.md
analysis/: osobennosti-nashego-vremeni.md  schaste-kak-smysl-zhizni.md  sledovanie-prizvaniyu.md  stereotipy-schastya.md  strahi.md  strana.md
diplodoc/: .yfm  dd_replacement.sed  gitbook_diplodoc.sh  release.yml
docs/: .yfm  CNAME
epub/: _reset.scss  book_meta.yml  epub.css  epub3.scss  styles.css
obsidian/: hotkeys.json  templater.json
origin/: index.md  p1-020-call.md  p2-160-routine.md
pdf/: pdf.yml
prakticheskaya-chast/: fundamentalnaya-sistema-cennostei.md  open-source-svoboda-v-dvizhenii-k-lyubvi.md  socialnyi-kapital-i-obshie-celi.md
public/: CNAME  index.html  search-index.js
ru/: antora.yml
scripts/: adoc_to_md.py  build.sh  combine.py  conftest.py  epub-style.css  epub.sh  mkdocs-combine.py  pymdown-pandoc.lua  resize-images.sh  serve.js  test_adoc_to_md.py  tests.py  update-revdates.sh
source/: index.adoc  p1-010-happiness.adoc  p1-020-call.adoc  p1-030-time.adoc  p1-040-unhappiness.adoc  p1-050-country.adoc  p2-100-authors.adoc  p2-110-system.adoc  p2-120-school.adoc  (+9 more)
(+244 files in other folders)
