[project]
name = "whattodo"
version = "0.1.0"
description = "Что мне делать? :-) Текст в концепции «Общие Цели»"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # text-forge plugin (local editable during development)
    "text-forge",
]

# uv configuration
[tool.uv.sources]
# In the standalone whattodo repo, `text-forge` is typically a submodule at `./text-forge`.
# In this workspace, whattodo is mounted inside the text-forge repo, so the package lives at `..`.
text-forge = { path = "..", editable = true }
